--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "front-end-node-1",
-  "version": "1.0.0",
+  "dependencies": {
+    "axios": "1.3.4",
+    "body-parser": "1.20.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security"
+  },
+  "name": "front-end-node",
   "description": "",
-  "main": "index.js",
+  "version": "1.0.0",
+  "main": "AxiosNodeHtml.js",
+  "devDependencies": {
+    "prettier": "^3.0.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nutto456/Front-End-Node.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^1.5.0",
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "http": "^0.0.1-security"
+  "bugs": {
+    "url": "https://github.com/Nutto456/Front-End-Node/issues"
   },
-  "devDependencies": {}
+  "homepage": "https://github.com/Nutto456/Front-End-Node#readme"
 }
